@@ -5,7 +5,8 @@ Changelog
 2.3.2 (unreleased)
 ------------------
 
-- Nothing changed yet.
+- Added test for zip export.
+  [lknoepfel]
 
 
 2.3.1 (2015-03-12)
